# firefly_client

./: .buildinfo  .editorconfig  .gitignore  .travis.yml  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  reference.html  requirements.txt  search.html  searchindex.js  setup.py  wise-00.fits
.github/workflows/: publish-docs.yml
_sources/api/: firefly_client.Env.rst.txt  firefly_client.FFWs.rst.txt  firefly_client.FireflyClient.rst  firefly_client.FireflyClient.rst.txt  firefly_client.RangeValues.rst.txt
_sources/development/: guide.rst  guide.rst.txt  index.rst  new-release-procedure.md.txt
_sources/usage/: charting.rst.txt  displaying-images.rst.txt  getting-started.rst.txt  viewing-tables.ipynb  viewing-tables.rst.txt
_sources/usage/examples/: demo-3color.ipynb
api/: firefly_client.Env.html  firefly_client.FFWs.html  firefly_client.FireflyClient.html  firefly_client.RangeValues.html
development/: guide.html  index.html  new-release-procedure.html
doc/: conf.py  displaying-images.rst  getting-started.rst  index.rst  initializing-vanilla.rst  new-release-procedure.md  overlaying-regions.rst
docs/: conf.py  index.rst  reference.rst
docs/_ext/: script_pages.py
docs/development/: guide.rst  new-release-procedure.md
docs/usage/: callbacks-extensions.rst  demo-notebooks.rst  displaying-3color.ipynb  displaying-hips.ipynb  displaying-images.ipynb  displaying-images.rst  getting-started.ipynb  getting-started.rst  index.rst  initializing-vanilla.ipynb  initializing-vanilla.rst  overlaying-regions.ipynb  viewing-tables.ipynb  viewing-tables.rst
examples/: basic-demo-tableload.ipynb  basic-demo.ipynb  basic_3color.ipynb  demo-3color.ipynb  demo-HiPS.ipynb  demo-advanced-all.ipynb  demo-advanced-steps.ipynb  demo-advanced-table-images.ipynb  demo-advanced-tables-images-upload.ipynb  demo-basic.ipynb  demo-image-from-url.ipynb  demo-lsst-footprint.ipynb  demo-overlay-footprint.ipynb  demo-region.ipynb  demo-show-image.ipynb  demo-simple-callback-in-terminal.py  filetable.py  firefly_slate_demo.py  footprints256.py  footprints256_peaks.py  footprints256_peaks_1.py  footprints256_peaks_2.py  footprints_wise_4band.json  lsst_footprint_demo.ipynb  lsst_footprint_demo2.ipynb  multi-moc.py  plot-interface.ipynb  reference-guide.ipynb  region-text-demo.ipynb  slate-demo-explicit.ipynb  slate-demo-explicit2.ipynb  slate-demo.ipynb  slate_hips_test.ipynb  test-access.ipynb  test-socket-not-added-until-listener.ipynb
examples/deprecated_grid_layout/: demo-firefly-slate-module.ipynb  demo-grid-basic.ipynb
examples/development_tests/: test-5-instances-3-channels.py  test-access.ipynb  test-show_data.ipynb  test-socket-not-added-until-listener.ipynb  test-version.ipynb
firefly_client/: __init__.py  _server_compat.py  env.py  fc_utils.py  ffws.py  firefly_client.py  firefly_ws_connections.py  plot.py  range_values.py
firefly_client/cli/: __init__.py  config.py  config_cmds.py  entrypoint.py  upload_cmds.py  utils.py
pr/76/: genindex.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js
pr/76/_sources/: index.rst
pr/76/_sources/usage/: callbacks-extensions.ipynb  charting.ipynb  displaying-images.ipynb  index.rst  initializing-vanilla.ipynb
pr/76/api/: firefly_client.FireflyClient.html
pr/76/development/: guide.html  index.html  new-release-procedure.html
pr/76/usage/: callbacks-extensions.html  charting.html  demo-notebooks.html  displaying-3color.html  displaying-hips.html  displaying-images.html  getting-started.html  index.html  initializing-vanilla.html  overlaying-regions.html  viewing-tables.html  viewing-tables.ipynb
pr/78/: py-modindex.html
pr/78/_sources/: reference.rst
pr/78/development/: index.html  new-release-procedure.html
pr/78/usage/: charting.html  displaying-3color.html  displaying-hips.html  displaying-images.html  getting-started.html  viewing-tables.ipynb
pr/79/: genindex.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js
pr/79/_static/: custom-icon.js
pr/79/api/: firefly_client.FireflyClient.html
pr/79/development/: guide.html  index.html  new-release-procedure.html
pr/79/usage/: callbacks-extensions.html  charting.html  demo-notebooks.html  displaying-3color.html  displaying-hips.html  displaying-hips.ipynb  displaying-images.html  getting-started.html  index.html  initializing-vanilla.html  overlaying-regions.html  viewing-tables.html  viewing-tables.ipynb
test/: cb.ipynb  conftest.py  container.py  fc-version.py  firefly_slate_demo.py  test-5-instances-3-channels.py  test-simple-callback-in-lab.ipynb  test-simple-callback-response.py  test-socket-not-added-until-listener.ipynb  test_5_instances_3_channels.py  test_basic_demo_tableload.py  test_basic_tableload.py  test_demo_3color.py  test_demo_HiPS.py  test_demo_advanced_all.py  test_demo_advanced_steps.py  test_demo_advanced_table_images.py  test_demo_advanced_tables_images_upload.py  test_demo_basic.py  test_demo_lsst-footprint.py  test_demo_lsst_footprint.py  test_demo_region.py  test_demo_show-image.py  test_fc_version.py  test_plot_interface.py  test_simple_callback.py  test_simple_callback_in_lab.ipynb  test_simple_callback_response.py  test_socket_not_added_until_listener.ipynb  test_socket_not_added_until_listener.py
tests/: test_import.py  test_server_compat.py
ups/: firefly_client.cfg  firefly_client.table
usage/: callbacks-extensions.html  charting.html  demo-notebooks.html  displaying-3color.html  displaying-hips.html  displaying-images.html  getting-started.html  getting-started.ipynb  index.html  initializing-vanilla.html  overlaying-regions.html  viewing-tables.html  viewing-tables.ipynb
usage/examples/: demo-3color.html  demo-HiPS.html  demo-basic.html  demo-basic.ipynb  demo-multiple-table.html  demo-overlay-footprint.html  demo-region.html  demo-simple-callback-in-jupyter.html  demo-simple-callback-in-jupyter.ipynb  demo-simple-callback-in-terminal.html  filetable.html  multi-moc.html  plot-interface.html  reference-guide.html
(+33 files in other folders)
