[build-system]
requires = ["setuptools >= 64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "firefly_client"
version = "3.3.0"
description = "Python API for Firefly: display astronomical data as tables, images, charts, and more!"
authors = [{ name = "IPAC LSST SUIT" }]
readme = "README.md"
license = { file = "License.txt" }
requires-python = ">=3.10"
dependencies = ["websocket-client", "requests"]
keywords = [
    "jupyter",
    "firefly",
    "caltech",
    "ipac",
    "astronomy",
    "visualization",
    "images",
    "charts",
    "tables",
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Visualization",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/Caltech-IPAC/firefly_client"
Documentation = "https://caltech-ipac.github.io/firefly_client"
Repository = "http://github.com/Caltech-IPAC/firefly_client.git"

[project.optional-dependencies]
docs = [
    "Sphinx~=7.1.0",
    "sphinx-automodapi",
    "pydata-sphinx-theme",
    "myst-parser",
]
test = [
    "pytest>=8.3.4",
    "pytest-container>=0.4.3",
    "pytest-doctestplus>=1.4.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.6.1",
    "tox>=4.0",
    "tox-uv>=1.20",
]
astropy = ["astropy>=6"]
cli = [
    "appdirs>=1.4.4",
    "mashumaro[toml]>=3.15",
    "python-dotenv>=1.0.1",
    "rich-click>=1.8.6",
    "tomlkit>=0.13.2",
]

[project.scripts]
firefly = "firefly_client.cli.entrypoint:firefly"

[tool.setuptools]
packages = ["firefly_client"]

[tool.pytest.ini_options]
testpaths = ["firefly_client", "docs", "test"]
doctest_plus = "enabled"
text_file_format = "rst"
addopts = [
    "--doctest-rst",
    "--numprocesses=4",
    "--import-mode=importlib",
    "--doctest-modules",
]

[tool.coverage.run]
omit = [
    "firefly_client/conftest.py",
    "firefly_client/*setup_package*",
    "firefly_client/tests/*",
    "firefly_client/*/tests/*",
    "firefly_client/extern/*",
    "firefly_client/version*",
    "*/firefly_client/conftest.py",
    "*/firefly_client/*setup_package*",
    "*/firefly_client/tests/*",
    "*/firefly_client/*/tests/*",
    "*/firefly_client/extern/*",
    "*/firefly_client/version*",
]

[tool.tox]
env_list = ["clean", "3.10", "3.11", "3.12", "3.13", "3.14", "build_docs"]
requires = ["tox>=4.0", "tox-uv>=1.20"]

[tool.tox.env_run_base]
commands = [
    [
        "pytest",
        "--doctest-rst",
        "--numprocesses=4",
        "--import-mode=importlib",
        "--doctest-modules",
        "{posargs}",
    ],
]
runner = "uv-venv-lock-runner"
description = "run tests with the oldest supported version of key dependencies on {base_python}"
pass_env = ["TOXENV", "CI", "CC", "LOCALE_ARCHIVE", "LC_ALL"]
set_env = { MPLBACKEND = "agg" }
extras = ["test", "astropy"]
uv_python_preference = "only-managed"
allowlist_externals = ["python"]

[tool.tox.env.clean]
description = "Clean artifacts before testing"
commands = [["coverage", "erase"]]
runner = "uv-venv-lock-runner"
extras = ["test", "astropy"]
uv_python_preference = "only-managed"
allowlist_externals = ["python"]

[tool.tox.env.build_docs]
description = "invoke sphinx-build to build the HTML docs"
change_dir = "docs"
extras = ["docs"]
commands = [["make", "html"]]
uv_python_preference = "only-managed"
allowlist_externals = ["python", "make", "uv"]
