[build-system]
requires = ["setuptools >= 64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "firefly_client"
version = "3.4.0"
description = "Python API for Firefly: display astronomical data as tables, images, charts, and more!"
authors = [
    {name = "IPAC Firefly Developers"}
]
readme = "README.md"
license = {file = "License.txt"}
requires-python = ">=3.10"
dependencies = [
    "websocket-client",
    "requests"
]
keywords = [
    "jupyter",
    "firefly",
    "caltech",
    "ipac",
    "astronomy",
    "visualization",
    "images",
    "charts",
    "tables"
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Visualization",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3"
]

[project.urls]
Homepage = "https://github.com/Caltech-IPAC/firefly_client"
Documentation = "https://caltech-ipac.github.io/firefly_client"
Repository = "http://github.com/Caltech-IPAC/firefly_client.git"

[project.optional-dependencies]
docs = [
    "Sphinx~=7.1.0",
    "sphinx-automodapi",
    "pydata-sphinx-theme",
    "myst-parser"
]
